# Cursed-Sentiment

./: .env.example  .gitignore  ARCHITECTURE.md  KNOWN_LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: daily-pipeline.yml
data/_state/: classifier_cache.jsonl  silver_processed.json
data/gold/: _pipeline_status.json  agg_char_week.parquet  agg_polarisation.parquet  char_summary.parquet  dim_event.parquet  eval_results.json  fact_comment_sentiment.parquet  fact_post_sentiment.parquet
pipeline/extract/: _common.py  arctic_shift.py  reddit_praw.py
pipeline/load/: build_gold.py  build_summaries.py
pipeline/orchestrate/: backfill_events.py  run_daily.py
pipeline/transform/: classify_sentiment.py  clean.py  eval_runner.py  prompts.py  resolve_characters.py
reference/: characters.yaml  eval_synthetic.jsonl  events.yaml
site/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/app/components/: CharacterModal.tsx  Footer.tsx  GegeMomentsList.tsx  HeadlineChart.tsx  Hero.tsx  HeroStats.tsx  LastUpdated.tsx  Nav.tsx  PipelineScroller.tsx  PolarisationTable.tsx  SentimentLandscape.tsx  SubredditBreakdown.tsx  WhyThisExists.tsx
site/app/methodology/: page.tsx
site/lib/: duckdb.ts  queries.ts
site/public/data/: agg_char_week.parquet  agg_polarisation.parquet  (+5 more)
site/scripts/: sync-gold.mjs
tests/: test_arctic_shift.py  test_build_gold.py  test_character_resolution.py  test_classify_sentiment.py  test_clean.py  test_extract_common.py  test_reddit_praw.py
