[project]
name = "cursed-sentiment"
version = "0.1.0"
description = "Character-aware sentiment analytics over r/JuJutsuKaisen"
requires-python = ">=3.11"
authors = [{ name = "Aaditeya Sharma" }]

dependencies = [
    "duckdb>=1.0",
    "pyarrow>=16",
    "pandas>=2.2",
    "praw>=7.7",
    "httpx>=0.27",
    "tenacity>=8.4",
    "openai>=1.40",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
cursed = "pipeline.orchestrate.run_daily:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"